# Helloworld_York_Demo

./: .gitignore  Cargo.toml  README.md  robosapiens.ini
.github/workflows/: rust.yml
Realization/: Dockerfile  Turtlebotsim.py  config.yaml  config_redis copy.yaml  config_redis.yaml  docker-compose.yml  main.py  messages.py  requirements.txt
Realization/Dashboard/: Dockerfile  LiveDashboard.py  app.py  requirements.txt
Realization/Nodes/Analysis/: Analysis.py  Dockerfile  config.yaml  messages.py
Realization/Nodes/Execute/: Dockerfile  Execute.py  config.yaml  messages.py
Realization/Nodes/Legitimate/: Dockerfile  Legitimate.py  config.yaml  messages.py
Realization/Nodes/Monitor/: Dockerfile  Monitor.py  config.yaml  requirements.txt
Realization/Nodes/Plan/: Dockerfile  Plan.py  config.yaml  messages.py  requirements.txt
Realization/Nodes/Trustworthiness/: Dockerfile  Trustworthiness.py  config.yaml  requirements.txt
Realization/Orchestrator/: Dockerfile  orchestrator.py  requirements.txt
Realization/Platform/Option2/: compose.yaml
Realization/Simulator/: Dockerfile  Turtlebotsim.py  dash_turtlebotsim.py
Realization/TrustworthinessChecker/: .dockerignore  .gitignore  README.md
Realization/TrustworthinessChecker/benches/: parsing.rs
Realization/TrustworthinessChecker/docker/: docker-compose-mqtt.yaml  docker-compose-redis.yaml
Realization/TrustworthinessChecker/examples/: simple_add.lola
Realization/TrustworthinessChecker/examples/dynamic_lola/: guided_dup.lola  overlap_dup.lola
Realization/TrustworthinessChecker/libs/tc-testutils/: Cargo.toml
Realization/TrustworthinessChecker/libs/tc-testutils/src/: mqtt.rs
Realization/TrustworthinessChecker/src/: benches_common.rs  lib.rs  lola_fixtures.rs  macros.rs  main.rs
Realization/TrustworthinessChecker/src/cli/: adapters.rs  args.rs
Realization/TrustworthinessChecker/src/core/: interfaces.rs  mod.rs  stream_converstions.rs  values.rs  variables.rs
Realization/TrustworthinessChecker/src/io/: mod.rs
Realization/TrustworthinessChecker/src/runtime/: asynchronous.rs  distributed.rs  mod.rs  reconfigurable_async.rs
Realization/TrustworthinessChecker/src/semantics/: mod.rs
Realization/TrustworthinessChecker/src/utils/: cancellation_token.rs  mod.rs
Realization/TrustworthinessChecker/tests/: cli_tests.rs  runtime_tests.rs  test_distributed.rs  test_distributed_mqtt.rs  test_redis_io.rs  test_ros_input_provider.rs
Realization/TrustworthinessChecker/tests/fixtures/: counter.input  counter.lola  debug_simple.input  float_arithmetic.input  float_arithmetic.lola  if_else.input  malformed.input  simple_add_typed.input  simple_add_typed.lola  single_timestep.input
benches/: dyn_paper.rs  special_constraints_add.rs
examples/: counter_ros_map.json
examples/distributed/: mqtt_dist_echo.lola  mqtt_dist_echo_graph.lola  mqtt_dist_echo_graph_mini.lola
libs/tc-testutils/src/: lib.rs  redis.rs  testcontainers.rs
ros_interfaces/robo_sapiens_interfaces/: CMakeLists.txt  package.xml
ros_interfaces/robo_sapiens_interfaces/msg/: Human.msg  HumanList.msg
scripts/: paper_benchmark_plot.py
src/: lola_fixtures.rs  stream_utils.rs
src/cli/: adapters.rs  mod.rs
src/core/: mod.rs  values.rs
src/dep_manage/: graph_based.rs
src/distributed/: distribution_graphs.rs  locality_receiver.rs  mod.rs
src/distributed/scheduling/planners/: constrained.rs  core.rs
src/io/builders/: input_provider_builder.rs
src/io/mqtt/: locality_receiver.rs  map_input_provider.rs
src/io/redis/: output_handler.rs
src/io/testing/: manual_output_handler.rs  null_output_handler.rs
src/lang/core/: parser.rs
src/lang/distribution_constraints/: ast.rs
src/lang/dynamic_lola/: ast.rs  lalr_parser.rs  parser.rs
src/runtime/: builder.rs
src/runtime/constraints/: runtime.rs  solver.rs
src/semantics/: async_interface.rs
src/semantics/distributed/: localisation.rs  semantics.rs
src/semantics/untimed_typed_lola/: semantics.rs
tests/: cli_tests.rs  test_mqtt_io.rs  test_redis_io.rs
tests/fixtures/: debug_simple.lola  if_else.lola  past_indexing.input  past_indexing.lola  simple_add_distribution_graph.json  string_concat.input  string_concat.lola
(+43 files in other folders)
